# brave-core

app/: brave_generated_resources.grd
browser/: BUILD.gn
browser/brave_rewards/android/: brave_rewards_native_worker.cc  brave_rewards_native_worker.h
browser/extensions/: BUILD.gn  brave_extension_management.cc  brave_extension_management.h  brave_tor_client_updater.cc
browser/extensions/api/: brave_rewards_api.cc  brave_rewards_api.h
browser/infobars/: BUILD.gn
browser/tor/: tor_profile_service.cc  tor_profile_service.h  tor_profile_service_impl.cc
browser/ui/: BUILD.gn  sources.gni  ui.gni
browser/ui/webui/: brave_rewards_page_ui.cc  brave_webui_source.cc
chromium_src/chrome/browser/ui/: browser_tabrestore.cc
chromium_src/components/content_settings/core/common/: cookie_settings_base.cc
common/extensions/api/: brave_rewards.json
components/brave_ads/browser/: ads_p2a.cc  ads_service_impl.cc  ads_service_impl.h  ads_service_impl_unittest.cc
components/brave_rewards/browser/: rewards_service.h  rewards_service_impl.cc  rewards_service_impl.h  rewards_service_impl_unittest.cc  rewards_service_observer.h
components/brave_rewards/test/: BUILD.gn
components/brave_webtorrent/browser/: webtorrent_util.cc  webtorrent_util.h
components/definitions/: chromel.d.ts  rewards.d.ts
components/p3a/: brave_p2a_protocols.cc
components/resources/: brave_components_strings.grd
components/services/bat_ledger/: bat_ledger_impl.cc  bat_ledger_impl.h
patches/: chrome-browser-ui-BUILD.gn.patch
test/: BUILD.gn
(+4 files in other folders)
